# project-template

./: .gitignore  setup.cfg
Dockerfiles/: .env  Dockerfile-backend  Dockerfile-frontend  docker-compose.yml
backend/: pyproject.toml
backend/env/: .env.dev  .env.local
backend/gunicorn/: __init__.py  gunicorn_conf.py
backend/src/: main.py
backend/src/common/: exception.py  logger.py  settings.py
backend/src/schema/: http_response.py
backend/src/util/: httputil.py
backend/supervisor/: supervisord.conf
frontend/: .env  package-lock.json  package.json  vite.config.js
frontend/deployment/: nginx.conf  supervisord.conf
frontend/src/: main.js
frontend/src/api/: auth.js  client.js  index.js  request_handler.js
frontend/src/layouts/: default.vue  second.vue
frontend/src/pages/: [...all].vue  index.vue
frontend/src/pages/board/: [id].vue  detail.vue  index.vue
frontend/src/pages/search/: user.vue
frontend/src/pages/search/[dynamic]/: [test].vue  index.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  global.js  handler.js  modal.js
mariadb/: my.cnf
scripts/: build-back.sh  build-front.sh
