[tool.poetry]
name = "fastapi-celery"
version = "0.1.0"
description = ""
authors = ["nahoon kang <ejrtks102020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
